src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>DCMSS_Devotee_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Devotee</description>
        <inlineHelpText>Devotee</inlineHelpText>
        <label>Devotee</label>
        <referenceTo>DCMSS_Devotee__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Receipt__c</fullName>
        <description>Receipt number for hundi and customer</description>
        <displayFormat>RCPT#-{00000000}</displayFormat>
        <inlineHelpText>Receipt number for hundi and customer</inlineHelpText>
        <label>Receipt</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Store whether the payment transaction is for donation or services or goods.</description>
        <inlineHelpText>Store whether the payment transaction is for donation or services or goods.</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Donation</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Goods</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>